--- a/index.html
+++ b/index.html
@@ -1,97 +1,291 @@
 <!DOCTYPE html>
-</p>
-</div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Baked by Christy</title>
 
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-<div class="card" style="margin-top:1rem">
-<h3>💵 Cash Option</h3>
-<p>Cash is accepted at pickup. Exact change preferred.</p>
-</div>
-</section>
+  <style>
+    :root {
+      --brown: #6b4f3f;
+      --khaki: #e7dcc3;
+      --cream: #fffaf2;
+    }
 
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+    }
 
-<section>
-<h2>📸 Follow & Order on Instagram</h2>
-<p>DMs open for questions & sneak peeks 👀</p>
-<a href="https://instagram.com" target="_blank" style="display:inline-block;margin-top:1rem;padding:0.8rem 1.2rem;border-radius:14px;background:#6b4f3f;color:white;text-decoration:none">@bakedbychristy</a>
-</section>
+    body {
+      color: var(--brown);
+      background: var(--khaki);
+      overflow-x: hidden;
+    }
 
+    /* ===== BACKGROUND VIDEO ===== */
+    .video-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -2;
+      filter: brightness(0.55);
+    }
 
-<footer>
-© 2026 Baked by Christy · bakedbychristy.com
-</footer>
+    .overlay {
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(180deg, rgba(231,220,195,0.85), rgba(231,220,195,0.95));
+      z-index: -1;
+    }
 
+    /* ===== HEADER ===== */
+    header {
+      text-align: center;
+      padding: 5rem 2rem 4rem;
+      animation: fadeDown 1.2s ease;
+    }
 
-<script>
-// bake countdown
-function updateCountdown() {
-const now = new Date();
-const sunday = new Date();
-sunday.setDate(now.getDate() + ((7 - now.getDay()) % 7));
-sunday.setHours(12,0,0,0);
-const diff = sunday - now;
-const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-document.getElementById('countdown').textContent = `Next bake in ${days} day(s) 🍞`;
-}
-updateCountdown();
-// subtle parallax effect
-window.addEventListener('scroll', () => {
-const scrolled = window.scrollY;
-document.querySelector('.video-bg').style.transform = `translateY(${scrolled * 0.15}px)`;
-});
-/<script>
-  const stock = {
-    'Chocolate Chip': 20,
-    'Double Chocolate': 15,
-    'Sugar Cookie': 0
-  };
+    header h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      letter-spacing: 3px;
+    }
 
-  function updateStockUI() {
-    document.getElementById('ccStock').textContent =
-      stock['Chocolate Chip'] > 0 ? 'In Stock' : 'SOLD OUT';
-    document.getElementById('dcStock').textContent =
-      stock['Double Chocolate'] > 0 ? 'In Stock' : 'SOLD OUT';
-    document.getElementById('scStock').textContent =
-      stock['Sugar Cookie'] > 0 ? 'In Stock' : 'SOLD OUT';
+    header p {
+      font-size: 1.3rem;
+      margin-top: 1rem;
+    }
 
-    const flavorSelect = document.getElementById('flavor');
-    [...flavorSelect.options].forEach(opt => {
-      if (stock[opt.value] === 0) opt.disabled = true;
-    });
-  }
+    /* ===== SECTIONS ===== */
+    section {
+      max-width: 950px;
+      margin: 3rem auto;
+      padding: 2.5rem;
+      background: var(--cream);
+      border-radius: 26px;
+      box-shadow: 0 20px 45px rgba(0,0,0,0.15);
+      animation: fadeUp 1.2s ease;
+    }
 
-  updateStockUI();
+    h2 {
+      font-size: 2.3rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
 
-  const form = document.getElementById('orderForm');
-  const message = document.getElementById('message');
+    /* ===== GRID / CARDS ===== */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
 
-  form.addEventListener('submit', function (e) {
-    e.preventDefault();
+    .card {
+      background: var(--khaki);
+      padding: 1.6rem;
+      border-radius: 22px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-    const name = document.getElementById('name').value;
-    const email = document.getElementById('email').value;
-    const qty = document.getElementById('qty').value;
-    const payment = document.getElementById('payment').value;
-    const flavor = document.getElementById('flavor').value;
-    const school = document.getElementById('school').value;
-    const day = document.getElementById('day').value;
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 12px 25px rgba(0,0,0,0.2);
+    }
 
-    const total = qty * 2;
+    /* ===== FORM ===== */
+    form {
+      display: grid;
+      gap: 1rem;
+      margin-top: 1.5rem;
+    }
 
-    const body = `New Cookie Order:%0D%0A
+    input, select, button {
+      padding: 0.9rem;
+      border-radius: 14px;
+      border: 2px solid var(--brown);
+      font-size: 1rem;
+    }
+
+    button {
+      background: var(--brown);
+      color: white;
+      cursor: pointer;
+      font-weight: 600;
+      transition: transform 0.2s ease, background 0.2s ease;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      background: #52392d;
+    }
+
+    /* ===== FOOTER ===== */
+    footer {
+      text-align: center;
+      padding: 3rem 1rem;
+      font-size: 0.9rem;
+    }
+
+    /* ===== ANIMATIONS ===== */
+    @keyframes fadeDown {
+      from { opacity: 0; transform: translateY(-40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+  </style>
+</head>
+<body>
+
+  <!-- Background video -->
+  <video class="video-bg" autoplay muted loop>
+    <source src="https://cdn.coverr.co/videos/coverr-baking-cookies-8540/1080p.mp4" type="video/mp4">
+  </video>
+  <div class="overlay"></div>
+
+  <!-- HEADER -->
+  <header>
+    <h1>Baked by Christy</h1>
+    <p>Fresh, homemade cookies baked with love 🤎</p>
+  </header>
+
+  <!-- HOW IT WORKS -->
+  <section>
+    <h2>How Ordering Works</h2>
+    <div class="grid">
+      <div class="card">🍪 Orders can be placed <strong>any day</strong></div>
+      <div class="card">📦 Pickup on <strong>Monday, Wednesday & Friday</strong></div>
+      <div class="card">🏫 Pickup at <strong>Benjamin Tasker</strong> or <strong>Bowie High</strong></div>
+    </div>
+  </section>
+
+  <!-- FLAVORS -->
+  <section>
+    <h2>Cookie Flavors</h2>
+    <div class="grid">
+      <div class="card">🍫 Chocolate Chip<br><strong>In Stock</strong></div>
+      <div class="card">🔥 S'mores<br><strong>In Stock</strong></div>
+      <div class="card">🖤 Double Stuffed Oreo<br><strong>SOLD OUT</strong></div>
+    </div>
+    <p style="text-align:center; margin-top:1rem"><strong>$2 per cookie</strong></p>
+  </section>
+
+  <!-- CHECKOUT -->
+  <section>
+    <h2>Checkout</h2>
+    <form id="orderForm">
+      <input type="text" id="name" placeholder="Your Name" required>
+      <input type="email" id="email" placeholder="Your Email" required>
+      <input type="number" id="qty" placeholder="Number of Cookies" min="1" required>
+
+      <select id="flavor" required>
+        <option value="">Choose Cookie Flavor</option>
+        <option>Chocolate Chip</option>
+        <option>S'mores</option>
+        <option disabled>Double Stuffed Oreo (Sold Out)</option>
+      </select>
+
+      <select id="school" required>
+        <option value="">Pickup Location</option>
+        <option>Benjamin Tasker</option>
+        <option>Bowie High</option>
+      </select>
+
+      <select id="day" required>
+        <option value="">Pickup Day</option>
+        <option>Monday</option>
+        <option>Wednesday</option>
+        <option>Friday</option>
+      </select>
+
+      <select id="payment" required>
+        <option value="">Payment Method</option>
+        <option>Apple Pay</option>
+        <option>Cash</option>
+      </select>
+
+      <button type="submit">Place Order</button>
+      <p id="message"></p>
+    </form>
+  </section>
+
+  <!-- PAYMENT INFO -->
+  <section>
+    <h2>Payment Info</h2>
+    <div class="grid">
+      <div class="card">
+        🍎 <strong>Apple Pay</strong><br>
+        Send payment to:<br>
+        <strong>202-873-0422</strong><br>
+        Include your name + quantity
+      </div>
+      <div class="card">
+        💵 <strong>Cash</strong><br>
+        Accepted at pickup<br>
+        Exact change preferred
+      </div>
+    </div>
+  </section>
+
+  <!-- INSTAGRAM -->
+  <section>
+    <h2>Follow & Order on Instagram</h2>
+    <p style="text-align:center">DMs open for questions & sneak peeks 👀</p>
+    <div style="text-align:center; margin-top:1.5rem">
+      <span style="background:var(--brown); color:white; padding:0.8rem 1.4rem; border-radius:20px">@bakedbychristy</span>
+    </div>
+  </section>
+
+  <footer>
+    © 2026 Baked by Christy · bakedbychristy.com
+  </footer>
+
+  <script>
+    const form = document.getElementById('orderForm');
+    const message = document.getElementById('message');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const qty = document.getElementById('qty').value;
+      const flavor = document.getElementById('flavor').value;
+      const school = document.getElementById('school').value;
+      const day = document.getElementById('day').value;
+      const payment = document.getElementById('payment').value;
+      const total = qty * 2;
+
+      const body = `New Cookie Order:%0D%0A
 Name: ${name}%0D%0A
 Email: ${email}%0D%0A
+Flavor: ${flavor}%0D%0A
 Quantity: ${qty}%0D%0A
 Total: $${total}%0D%0A
 Pickup Location: ${school}%0D%0A
 Pickup Day: ${day}%0D%0A
-Payment Method: ${payment}%0D%0A
-Cookie Flavor: ${flavor}%0D%0A`;
+Payment Method: ${payment}`;
 
-    window.location.href =
-      `mailto:luvz4himm@gmail.com?subject=Baked by Christy Order&body=${body}`;
+      window.location.href = `mailto:luvz4himm@gmail.com?subject=Baked by Christy Order&body=${body}`;
 
-    message.textContent = 'Order ready to send! Check your email app.';
-    message.style.color = 'green';
-  });
-</script> Stock control (change numbers as needed)
+      message.textContent = 'Order ready to send!';
+      message.style.color = 'green';
+    });
+  </script>
+
+</body>
+</html>
