--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
     <div class="grid">
       <div class="card">🍫 Chocolate Chip<br><strong>In Stock</strong></div>
       <div class="card">🔥 S'mores<br><strong>In Stock</strong></div>
-      <div class="card">🖤 Double Stuffed Oreo<br><strong>SOLD OUT</strong></div>
+      <div class="card">🖤 Double Stuffed Oreo<br><strong>In Stock</strong></div>
+      <div class="card"> Fruity Pebbles<br><strong>In stock</strong></div>
     </div>
     <p style="text-align:center; margin-top:1rem"><strong>$2 per cookie</strong></p>
   </section>
