--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div class="grid">
       <div class="card">🍪 Orders can be placed <strong>any day</strong></div>
       <div class="card">📦 Pickup on <strong>Monday, Wednesday & Friday</strong></div>
-      <div class="card">🏫 Pickup at <strong>Benjamin Tasker</strong> or <strong>Bowie High</strong></div>
+      <div class="card">🏫 Ordering from <strong>Benjamin Tasker</strong> or <strong>Bowie High</strong></div>
     </div>
   </section>
 
@@ -180,7 +180,7 @@
       <div class="card">🍫 Chocolate Chip<br><strong>In Stock</strong></div>
       <div class="card">🔥 S'mores<br><strong>In Stock</strong></div>
       <div class="card">🖤 Double Stuffed Oreo<br><strong>In Stock</strong></div>
-      <div class="card"> Fruity Pebbles<br><strong>In stock</strong></div>
+      <div class="card">🦕Fruity Pebbles<br><strong>In stock</strong></div>
     </div>
     <p style="text-align:center; margin-top:1rem"><strong>$2 per cookie</strong></p>
   </section>
@@ -197,7 +197,8 @@
         <option value="">Choose Cookie Flavor</option>
         <option>Chocolate Chip</option>
         <option>S'mores</option>
-        <option disabled>Double Stuffed Oreo (Sold Out)</option>
+        <option>Double Stuffed Oreo</option>
+        <option>Fruity Pebbles</option>
       </select>
 
       <select id="school" required>
